gccida/c1/estimate_case_costs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6095:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6121:19: error: subscripted value is not an array, pointer, or vector
*(short *)0x9E2112[v6] = v8; 
          ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6136:17: error: expected expression
if ( *( _OWORD *)&low->block.vars < *( _OWORD *)( v2 + 32) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6136:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&low->block.vars < *( _OWORD *)( v2 + 32) ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6136:48: error: expected expression
if ( *( _OWORD *)&low->block.vars < *( _OWORD *)( v2 + 32) ) 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6136:40: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&low->block.vars < *( _OWORD *)( v2 + 32) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6139:17: error: expected expression
if ( *( _OWORD *)&v5->block.vars < *( _OWORD *)&high->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6139:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&v5->block.vars < *( _OWORD *)&high->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6139:47: error: expected expression
if ( *( _OWORD *)&v5->block.vars < *( _OWORD *)&high->block.vars ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/stmt.c:6139:39: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&v5->block.vars < *( _OWORD *)&high->block.vars ) 
                                      ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/estimate_case_costs/src/obj/stmt.o] Error 1
